--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   uuid: ^2.0.4
   cached_network_image: ^2.0.0
   stripe_payment: ^1.0.6
+  transparent_image: ^1.0.0
 
 dev_dependencies:
 
@@ -54,11 +55,7 @@ flutter:
   #  - images/a_dot_ham.jpeg
 
   assets:
-    - assets/images/clip-payment.png
-    - assets/images/clip-sign-up.png
-    - assets/images/clip-1.png
-    - assets/images/clip-virtual-reality.png
-    - assets/images/clip-no-comments.png
+    - assets/images/
     - assets/icons/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
