--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,11 +23,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   provider: ^4.0.4
-  intl: ^0.16.1
   image_picker: ^0.6.1+10
   async: ^2.4.0
-  firebase_core: 0.4.4
-  firebase_auth: 0.15.0
+  firebase_core: ^0.4.4+3
+  firebase_auth: ^0.15.5+3
   cloud_firestore: ^0.13.4+1
   firebase_storage: ^3.1.3
   path_provider: ^1.6.5
@@ -35,7 +34,6 @@ dependencies:
   uuid: ^2.0.4
   cached_network_image: ^2.0.0
   stripe_payment: ^1.0.6
-  transparent_image: ^1.0.0
   timeago: ^2.0.26
 
 dev_dependencies:
