--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,13 @@ dependencies:
   cloud_firestore: ^0.13.4+1
   firebase_storage: ^3.1.3
   path_provider: ^1.6.5
-  image: ^2.1.12
   uuid: ^2.0.4
   cached_network_image: ^2.0.0
-  stripe_payment: ^1.0.6
   timeago: ^2.0.26
+  animations: ^1.0.0+5
+  transparent_image: ^1.0.0
+  contacts_service: ^0.4.6
+  permission_handler: ^5.0.0+hotfix.4
 
 dev_dependencies:
 
@@ -65,17 +67,6 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
