--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   transparent_image: ^1.0.0
   contacts_service: ^0.4.6
   permission_handler: ^5.0.0+hotfix.4
+  stripe_payment: ^1.0.7
+  cupertino_tabbar: ^1.0.1
+  flutter_staggered_grid_view: ^0.3.0
 
 dev_dependencies:
 
