--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   stripe_payment: ^1.0.7
   cupertino_tabbar: ^1.0.1
   flutter_staggered_grid_view: ^0.3.0
+  ink_page_indicator: ^0.1.2
+  flutter_svg: ^0.17.4
+  cloud_functions: ^0.4.2+3
 
 dev_dependencies:
 
