--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,14 @@ dependencies:
   ink_page_indicator: ^0.1.2
   flutter_svg: ^0.17.4
   cloud_functions: ^0.4.2+3
+  firebase_messaging: ^6.0.15
+  share: ^0.6.4+3
+  implicitly_animated_reorderable_list: ^0.2.2
+  auto_size_text: ^2.1.0
+  flutter_offline: ^0.3.0
+  sign_in_with_apple: ^2.4.0
+  google_sign_in: ^4.5.1
+  flutter_signin_button: ^1.0.0
 
 dev_dependencies:
 
