--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   cupertino_tabbar: ^1.0.1
   flutter_staggered_grid_view: ^0.3.0
   ink_page_indicator: ^0.1.2
-  flutter_svg: ^0.17.4
+  flutter_svg: ^0.18.0
   cloud_functions: ^0.4.2+3
   firebase_messaging: ^6.0.15
   share: ^0.6.4+3
@@ -51,6 +51,9 @@ dependencies:
   sign_in_with_apple: ^2.4.0
   google_sign_in: ^4.5.1
   flutter_signin_button: ^1.0.0
+  package_info: ^0.4.1
+  firebase_remote_config: ^0.3.1
+  url_launcher: ^5.5.0
 
 dev_dependencies:
 
