--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   package_info: ^0.4.1
   firebase_remote_config: ^0.3.1
   url_launcher: ^5.5.0
+  firebase_admob: ^0.9.3+4
 
 dev_dependencies:
 
