--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   provider: ^4.0.4
-  image_picker: ^0.6.1+10
+  image_picker: ^0.6.7+7
   async: ^2.4.0
   firebase_core: ^0.4.4+3
   firebase_auth: ^0.15.5+3
@@ -54,6 +54,7 @@ dependencies:
   package_info: ^0.4.1
   firebase_remote_config: ^0.3.1
   url_launcher: ^5.5.0
+  shared_preferences: ^0.5.10
 
 dev_dependencies:
 
