--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@types/stripe": "^7.13.23",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1",
+    "firebase-functions": "^3.11.0",
+    "firebase-tools": "^8.12.1",
     "stripe": "^8.49.0"
   },
   "devDependencies": {
