--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -31,13 +31,13 @@
 	<key>NSCameraUsageDescription</key>
 	<string>camera</string>
 	<key>NSContactsUsageDescription</key>
-	<string>To search for other friends that use this app.</string>
+	<string>This allows us to search for users that are in your contacts and also use our app. We don't safe your contacts, we only compare them with our database. If you allow us to use your contacts, you can find the result in our find friends section.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>microphone</string>
 	<key>NSMotionUsageDescription</key>
 	<string>motion</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>To upload an image</string>
+	<string>To upload a profile image. This image will be visible on your account.</string>
 	<key>NSRemindersUsageDescription</key>
 	<string>reminders</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
