--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.2.0 <3.0.0'
+  sdk: '>=2.8.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -25,10 +25,10 @@ dependencies:
   provider: ^4.0.4
   image_picker: ^0.6.7+7
   async: ^2.4.0
-  firebase_core: ^0.4.4+3
-  firebase_auth: ^0.15.5+3
-  cloud_firestore: ^0.13.4+1
-  firebase_storage: ^3.1.3
+  firebase_core: ^0.5.3
+  firebase_auth: ^0.18.4+1
+  cloud_firestore: ^0.14.4
+  firebase_storage: ^5.2.0
   path_provider: ^1.6.5
   uuid: ^2.0.4
   cached_network_image: ^2.0.0
@@ -42,7 +42,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
   ink_page_indicator: ^0.1.2
   flutter_svg: ^0.18.0
-  cloud_functions: ^0.4.2+3
+  cloud_functions: ^0.7.2
   firebase_messaging: ^6.0.15
   share: ^0.6.4+3
   implicitly_animated_reorderable_list: ^0.2.2
@@ -52,10 +52,10 @@ dependencies:
   google_sign_in: ^4.5.1
   flutter_signin_button: ^1.0.0
   package_info: ^0.4.1
-  firebase_remote_config: ^0.3.1
-  url_launcher: ^5.5.0
+  firebase_remote_config: ^0.4.3
+  url_launcher: ^5.7.10
   shared_preferences: ^0.5.10
-  firebase_admob: ^0.9.3+4
+  firebase_admob: ^0.10.3
   numberpicker: ^1.2.1
 
 dev_dependencies:
