--update-- DonationDialogWidget.dart

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   flutter_xlider: ^3.4.0
   lottie: ^0.7.0+1
   flutter_hooks: ^0.15.0
+  number_slide_animation: ^0.1.1
 
 
 dev_dependencies:
