--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   lottie: ^0.7.0+1
   flutter_hooks: ^0.15.0
   number_slide_animation: ^0.1.1
+  fl_chart: ^0.12.2
 
 
 dev_dependencies:
