--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,8 @@ dependencies:
   lottie: ^0.7.0+1
   flutter_hooks: ^0.15.0
   number_slide_animation: ^0.1.1
+  flutter_local_notifications: ^3.0.2
+  rxdart: ^0.25.0
 
 
 dev_dependencies:
