--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,7 +67,7 @@ dependencies:
   timeline_tile: ^1.0.0
   expandable: ^4.1.4
   charcode: ^1.1.3
-
+  palette_generator: ^0.2.3
 
 dev_dependencies:
 
