--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,8 @@ dependencies:
   expandable: ^4.1.4
   charcode: ^1.1.3
   palette_generator: ^0.2.3
+  catcher: ^0.4.0
+  sentry: ^4.0.2
 
 dev_dependencies:
 
