--- a/android/build.gradle
+++ b/android/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.5.0'
+        classpath 'com.android.tools.build:gradle:3.5.4'
         classpath 'com.google.gms:google-services:4.3.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
@@ -26,6 +26,10 @@ subprojects {
 subprojects {
     project.evaluationDependsOn(':app')
 }
+ext {
+    flutterFFmpegPackage  = "min-gpl-lts"
+}
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
