--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,9 @@ dependencies:
   expandable: ^4.1.4
   charcode: ^1.1.3
   palette_generator: ^0.2.3
+  flutter_ffmpeg: ^0.2.10
+  video_player: ^1.0.1
+  inview_notifier_list: ^1.0.0
 
 dev_dependencies:
 
