--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,7 @@ dependencies:
   flutter_ffmpeg: ^0.2.10
   video_player: ^1.0.1
   inview_notifier_list: ^1.0.0
+  visibility_detector: ^0.1.5
 
 dev_dependencies:
 
