--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,8 @@ dependencies:
   carousel_slider: ^2.3.1
   sentry: ^4.0.2
   catcher: ^0.4.0
-  animated_stream_list: ^1.1.0
+  fijkplayer: ^0.8.7
+  image_cropper: ^1.3.1
 
 dev_dependencies:
 
