--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,7 +74,7 @@ dependencies:
   carousel_slider: ^2.3.1
   sentry: ^4.0.2
   catcher: ^0.4.0
-  fijkplayer: ^0.8.7
+  chewie: ^0.12.2
   image_cropper: ^1.3.1
 
 dev_dependencies:
