--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   animations: ^1.0.0+5
   transparent_image: ^1.0.0
   contacts_service: ^0.4.6
-  permission_handler: ^5.0.1
+  permission_handler: 5.0.1+1
   stripe_payment: ^1.0.7
   cupertino_tabbar: ^1.0.1
   flutter_staggered_grid_view: ^0.3.0
@@ -72,11 +72,15 @@ dependencies:
   video_player: ^1.0.1
   visibility_detector: ^0.1.5
   carousel_slider: ^2.3.1
+  should_rebuild: ^0.1.3
   sentry: ^4.0.2
   catcher: ^0.4.0
   chewie: ^0.12.2
   image_cropper: ^1.3.1
   cron: ^0.2.4
+
+dependency_overrides:
+  permission_handler_platform_interface: 2.0.1
 
 dev_dependencies:
 
