--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   catcher: ^0.4.0
   chewie: ^0.12.2
   image_cropper: ^1.3.1
+  auto_animated: ^2.1.0
 
 dependency_overrides:
   permission_handler_platform_interface: 2.0.1
