--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,12 +69,13 @@ dependencies:
   charcode: ^1.1.3
   palette_generator: ^0.2.3
   flutter_ffmpeg: ^0.2.10
-  video_player: ^1.0.1
   visibility_detector: ^0.1.5
   carousel_slider: ^2.3.1
   should_rebuild: ^0.1.3
   sentry: ^4.0.2
   catcher: ^0.4.0
+  video_player: ^1.0.1
+  flutter_cache_manager: ^2.1.1
   chewie: ^0.12.2
   image_cropper: ^1.3.1
   intl: ^0.16.1
@@ -82,6 +83,11 @@ dependencies:
 
 dependency_overrides:
   permission_handler_platform_interface: 2.0.1
+#  video_player:
+#    git:
+#      url: https://github.com/sanekyy/plugins.git
+#      ref: caching
+#      path: packages/video_player/video_player
 
 dev_dependencies:
 
