--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -80,6 +80,9 @@ dependencies:
   image_cropper: ^1.3.1
   intl: ^0.16.1
   auto_animated: ^2.1.0
+  flare_flutter: ^2.0.6
+  download_assets: ^1.0.4
+  rive: ^0.6.8
 
 dependency_overrides:
   permission_handler_platform_interface: 2.0.1
