--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,9 +1,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.one_d_m">
+    package="com.odm.onedollarmovement">
 
     <uses-permission android:name="android.permission.VIBRATE"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:label="one_d_m"
         android:icon="@mipmap/ic_launcher">
@@ -23,9 +25,9 @@
                 android:name="flutterEmbedding"
                 android:value="2" />
         </activity>
+        <activity android:name="io.flutter.plugins.urllauncher.WebViewActivity" android:theme="@android:style/Theme.NoTitleBar.Fullscreen" android:exported="false"/>
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-6737404453820737~1231771836"/>
-
+            android:value="ca-app-pub-6737404453820737~6610538948"/>
     </application>
 </manifest>
