--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,37 +39,28 @@ dependencies:
   contacts_service: ^0.4.6
   permission_handler: 5.0.1+1
   stripe_payment: ^1.0.7
-  cupertino_tabbar: ^1.0.1
   flutter_staggered_grid_view: ^0.3.0
   ink_page_indicator: ^0.2.1
   flutter_svg: ^0.19.3
   cloud_functions: ^0.7.2
   firebase_messaging: ^6.0.15
-  share: ^0.6.4+3
+  # share: ^0.6.4+3
   auto_size_text: ^2.1.0
   flutter_offline: ^0.3.0
-  sign_in_with_apple: ^2.4.0
-  google_sign_in: ^4.5.1
-  flutter_signin_button: ^1.0.0
+  # sign_in_with_apple: ^2.4.0
+  # google_sign_in: ^4.5.1
+  expandable: ^5.0.1
+  timeline_tile: ^2.0.0
   package_info: ^0.4.1
   firebase_remote_config: ^0.4.3
   url_launcher: ^5.7.10
   shared_preferences: ^0.5.10
   firebase_admob: ^0.10.3
   numberpicker: ^1.2.1
-  flutter_xlider: ^3.4.0
   lottie: ^0.7.0+1
-  flutter_hooks: ^0.15.0
   number_slide_animation: ^0.1.1
-  flutter_local_notifications: ^3.0.2
-  rxdart: ^0.25.0
-  line_icons: ^0.2.0
-  timeline_tile: ^1.0.0
-  expandable: ^4.1.4
   charcode: ^1.1.3
-  palette_generator: ^0.2.3
   visibility_detector: ^0.1.5
-  carousel_slider: ^2.3.1
   should_rebuild: ^0.1.3
   sentry: ^4.0.2
   catcher: ^0.4.0
@@ -82,6 +73,7 @@ dependencies:
   flare_flutter: ^2.0.6
   download_assets: ^1.0.4
   rive: ^0.6.8
+  modal_bottom_sheet: ^2.0.0
 
 dependency_overrides:
   permission_handler_platform_interface: 2.0.1
