--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,10 +26,17 @@ dependencies:
   provider: ^4.0.4
   image_picker: ^0.6.7+7
   async: ^2.4.0
+
   firebase_core: ^0.5.3
   firebase_auth: ^0.18.4+1
   cloud_firestore: ^0.14.4
   firebase_storage: ^5.2.0
+  firebase_remote_config: ^0.4.3
+  cloud_functions: ^0.7.2
+  firebase_messaging: ^6.0.15
+  firebase_admob: ^0.10.3
+  firebase_dynamic_links: ^0.6.3
+
   path_provider: ^1.6.5
   uuid: ^2.0.4
   cached_network_image: ^2.0.0
@@ -42,9 +49,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.0
   ink_page_indicator: ^0.2.1
   flutter_svg: ^0.19.3
-  cloud_functions: ^0.7.2
-  firebase_messaging: ^6.0.15
-  # share: ^0.6.4+3
+
+  share: ^0.6.4+3
   auto_size_text: ^2.1.0
   flutter_offline: ^0.3.0
   # sign_in_with_apple: ^2.4.0
@@ -52,10 +58,9 @@ dependencies:
   expandable: ^5.0.1
   timeline_tile: ^2.0.0
   package_info: ^0.4.1
-  firebase_remote_config: ^0.4.3
+
   url_launcher: ^5.7.10
   shared_preferences: ^0.5.10
-  firebase_admob: ^0.10.3
   numberpicker: ^1.2.1
   lottie: ^0.7.0+1
   number_slide_animation: ^0.1.1
