--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.34+123
+version: 1.0.36+126
 
 environment:
   sdk: '>=2.8.0 <3.0.0'
@@ -84,6 +84,7 @@ dependencies:
   flutter_material_color_picker: ^1.0.5
   social_share: ^2.0.6
   screenshot: ^1.2.1
+  feature_discovery: ^0.13.0
 
 dependency_overrides:
   permission_handler_platform_interface: 2.0.1
